@@ -7,11 +7,15 @@
 package ru.game.aurora.world.equip;
 
 
+import ru.game.aurora.application.JsonConfigManager;
+
 import java.io.Serializable;
 
-public class StarshipWeaponDesc implements Serializable
+public class StarshipWeaponDesc implements Serializable, JsonConfigManager.EntityWithId
 {
     private static final long serialVersionUID = -6078375681186450286L;
+
+    public final String id;
 
     public final int damage;
 
@@ -25,12 +29,18 @@ public class StarshipWeaponDesc implements Serializable
 
     public final int reloadTurns;
 
-    public StarshipWeaponDesc(int damage, String name, String desc, String shotSprite, int range, int reloadTurns) {
+    public StarshipWeaponDesc(int damage, String id, String name, String desc, String shotSprite, int range, int reloadTurns) {
+        this.id = id;
         this.damage = damage;
         this.name = name;
         this.desc = desc;
         this.shotSprite = shotSprite;
         this.range = range;
         this.reloadTurns = reloadTurns;
+    }
+
+    @Override
+    public String getId() {
+        return id;
     }
 }
