@@ -7,6 +7,7 @@
 package ru.game.aurora.world.generation.quest;
 
 import org.newdawn.slick.Color;
+import ru.game.aurora.application.ResourceManager;
 import ru.game.aurora.npc.Dialog;
 import ru.game.aurora.npc.shipai.CombatAI;
 import ru.game.aurora.player.research.ResearchProjectDesc;
@@ -14,7 +15,6 @@ import ru.game.aurora.player.research.ResearchReport;
 import ru.game.aurora.player.research.projects.StarResearchProject;
 import ru.game.aurora.world.World;
 import ru.game.aurora.world.equip.StarshipWeapon;
-import ru.game.aurora.world.equip.StarshipWeaponDesc;
 import ru.game.aurora.world.generation.WorldGenerator;
 import ru.game.aurora.world.generation.WorldGeneratorPart;
 import ru.game.aurora.world.space.NPCShip;
@@ -47,7 +47,7 @@ public class InitialRadioEmissionQuestGenerator implements WorldGeneratorPart
 
         NPCShip defenceProbe = new NPCShip(-3, 1, "rogues_probe", world.getRaces().get("Rogues"), null, "Defence drone");
         defenceProbe.setAi(new CombatAI(world.getPlayer().getShip()));
-        defenceProbe.setWeapons(new StarshipWeapon(new StarshipWeaponDesc(1, "Plasma gun", "", "plasma_shot", 4, 4), StarshipWeapon.MOUNT_ALL));
+        defenceProbe.setWeapons(new StarshipWeapon(ResourceManager.getInstance().getWeapons().getEntity("plasma_cannon"), StarshipWeapon.MOUNT_ALL));
         defenceProbe.setHostile(true);
         defenceProbe.setStationary(true);
         brownStar.getShips().add(defenceProbe);
